Add in get request

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <form id="jsGetRepo" class="form">
+    <form id="jsGetRepos" class="form">
       <div class="form__header">
         <h1>GitHub User Repos</h1>
         <p>
