--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         </li>
       </ul>
     </form>
+    <div id="jsResults" class="results"></div>
     <script
       src="https://code.jquery.com/jquery-3.3.1.js"
       integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
